tests/paczka1/small_fuzzy/26657755.err
Error in line 13: bJfGOceH5GQ A906 87,0
